--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-# Gazette
+<html>
+<head>
+<title> The simplest HTML example 
+</title>
+</head>
+<body>
+<h1> This is  an HTML Page </h1>
+</body>
+</html>
